--- a/crates/lightbridge-authz-cli/Cargo.toml
+++ b/crates/lightbridge-authz-cli/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
-name = "lightbridge-authz-grpc"
+name = "lightbridge-authz-cli"
 version = "0.1.0"
 edition = "2024"
 publish = false
 license = "MIT OR Apache-2.0"
 
 [dependencies]
+clap.workspace = true
 tokio.workspace = true
-tonic.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 lightbridge-authz-core.workspace = true
-lightbridge-authz-proto.workspace = true
+lightbridge-authz-rest.workspace = true
+lightbridge-authz-grpc.workspace = true
