--- a/crates/lightbridge-authz-core/Cargo.toml
+++ b/crates/lightbridge-authz-core/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2024"
 serde.workspace = true
 serde_yaml.workspace = true
 thiserror.workspace = true
+anyhow.workspace = true
 tracing.workspace = true
