feat(core): add API key model, schema and DB layer
New: crates/lightbridge-authz-core/src/api_key.rs, db.rs, schema.rs. Updated: workspace Cargo.toml, core Cargo.toml, config/default.yaml, core config module, lib exports. Docs: added architecture notes under docs/.

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -9,4 +9,11 @@ auth:
   api_keys:
     - "dev-key-1"
     - "dev-key-2"
+database:
+  url: "postgres://postgres:postgres@localhost:5432/lightbridge_authz"
+  pool_size: 10
+oauth2:
+  introspection:
+    url: "https://issuer.example.com/oauth2/introspect"
+    timeout_ms: 2000
 ---
