--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ lightbridge-authz-cli = { path = "./crates/lightbridge-authz-cli" }
 
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
+serde_json = "1.0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 tonic = "0.12"
 tonic-build = "0.12"
@@ -28,3 +29,18 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 axum = "0.7"
 clap = { version = "4", features = ["derive"] }
+
+diesel = { version = "2.2", features = ["postgres","chrono","serde_json","uuid"] }
+diesel-async = { version = "0.5", features = ["postgres","bb8"] }
+diesel_migrations = "2.2"
+reqwest = { version = "0.12", features = ["json","rustls-tls"] }
+hyper = "1"
+http = "0.2"
+tower = "0.4"
+tower-http = "0.5"
+time = "0.3"
+chrono = { version = "0.4", features = ["serde"] }
+uuid = { version = "1.8", features = ["serde","v4"] }
+url = "2.5"
+argon2 = "0.5"
+rand_core = "0.6"
