--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 # .pre-commit-config.yaml
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
+    rev: v4.6.0
     hooks:
     -   id: check-yaml
     -   id: end-of-file-fixer
@@ -21,6 +21,7 @@ repos:
         entry: cargo fmt
         language: rust
         types: [rust]
+        pass_filenames: false
     -   id: cargo-clippy
         name: cargo clippy
         description: Lint files with clippy.
