--- a/crates/lightbridge-authz-api/Cargo.toml
+++ b/crates/lightbridge-authz-api/Cargo.toml
@@ -2,3 +2,11 @@
 name = "lightbridge-authz-api"
 version = "0.1.0"
 edition = "2024"
+
+[dependencies]
+axum.workspace = true
+async-trait.workspace = true
+lightbridge-authz-core = { workspace = true, features = ["axum"] }
+serde.workspace = true
+serde_json.workspace = true
+tracing.workspace = true
