feat: implement api key validation and update project structure
This commit includes:

- Add new api key validation modules

- Update project configuration files

- Add healthcheck functionality

- Update database schema and error handling

- Add gRPC service definitions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [
     "crates/lightbridge-authz-grpc",
     "crates/lightbridge-authz-rest",
     "crates/lightbridge-authz-cli",
-    "crates/lightbridge-authz-api",
+    "crates/lightbridge-authz-api", "crates/lightbridge-authz-api-key",
 ]
 resolver = "3"
 
@@ -47,3 +47,12 @@ uuid = { version = "1.8", features = ["serde","v4"] }
 url = "2.5"
 argon2 = "0.5"
 rand_core = "0.6"
+
+
+[profile.prod]
+inherits = "release"
+lto = true
+opt-level = "z"
+codegen-units = 1
+incremental = false
+strip = true
