--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,14 +1,12 @@
----
 server:
+  rest:
+    address: "0.0.0.0"
+    port: 3000
   grpc:
-    address: "127.0.0.1"
-    port: 50051
+    address: "0.0.0.0"
+    port: 50052
 logging:
   level: "info"
-auth:
-  api_keys:
-    - "dev-key-1"
-    - "dev-key-2"
 database:
   url: "postgres://postgres:postgres@localhost:5432/lightbridge_authz"
   pool_size: 10
@@ -16,4 +14,3 @@ oauth2:
   introspection:
     url: "https://issuer.example.com/oauth2/introspect"
     timeout_ms: 2000
----
