--- a/crates/lightbridge-authz-api/Cargo.toml
+++ b/crates/lightbridge-authz-api/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 axum.workspace = true
 async-trait.workspace = true
+lightbridge-authz-api-key = { path = "../lightbridge-authz-api-key" }
 lightbridge-authz-core = { workspace = true, features = ["axum"] }
 serde.workspace = true
 serde_json.workspace = true
