feat(grpc): add external authz server and Envoy proto integration
- implement gRPC External Authorization service (server.rs)
- integrate Envoy v3 protos and build.rs codegen
- update core API key validation, schema, and error handling
- remove deprecated echo example
- adjust REST handlers
- docs: add gRPC external authz guide
- chore: update workspace Cargo files and lockfile

--- a/crates/lightbridge-authz-grpc/Cargo.toml
+++ b/crates/lightbridge-authz-grpc/Cargo.toml
@@ -12,3 +12,4 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 lightbridge-authz-core.workspace = true
 lightbridge-authz-proto.workspace = true
+chrono.workspace = true
