--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,10 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 serde_json = "1.0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-tonic = "0.12"
-tonic-build = "0.12"
-prost = "0.13"
-prost-types = "0.13"
+tonic = "0"
+tonic-build = "0"
+prost = "0"
+prost-types = "0.14"
 thiserror = "2"
 anyhow = "1"
 tracing = "0.1"
@@ -33,20 +33,15 @@ axum = { version = "0.7", features = ["macros"] }
 async-trait = "0.1"
 clap = { version = "4", features = ["derive"] }
 
-diesel = { version = "2.2", features = ["postgres","chrono","serde_json","uuid"] }
-diesel-async = { version = "0.5", features = ["postgres","bb8"] }
-diesel_migrations = "2.2"
-reqwest = { version = "0.12", features = ["json","rustls-tls"] }
-hyper = "1"
-http = "0.2"
-tower = "0.4"
-tower-http = "0.5"
-time = "0.3"
+diesel = { version = "2", features = ["postgres","chrono","serde_json","uuid"] }
+diesel-async = { version = "0", features = ["postgres","bb8"] }
+diesel_migrations = "2"
 chrono = { version = "0.4", features = ["serde"] }
-uuid = { version = "1.8", features = ["serde","v4"] }
-url = "2.5"
-argon2 = "0.5"
-rand_core = "0.6"
+uuid = { version = "1", features = ["serde","v4"] }
+cuid = { version = "1" }
+argon2 = "0.6.0-rc.0"
+rand_core = "0"
+envoy-types = "0.7.0"
 
 
 [profile.prod]
