--- a/crates/lightbridge-authz-core/Cargo.toml
+++ b/crates/lightbridge-authz-core/Cargo.toml
@@ -9,6 +9,7 @@ serde_yaml.workspace = true
 serde_json.workspace = true
 chrono.workspace = true
 uuid.workspace = true
+cuid.workspace = true
 diesel.workspace = true
 diesel-async.workspace = true
 diesel_migrations.workspace = true
