--- a/crates/lightbridge-authz-api-key/Cargo.toml
+++ b/crates/lightbridge-authz-api-key/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-lightbridge-authz-core = { path = "../lightbridge-authz-core" }
+lightbridge-authz-core.workspace = true
 uuid.workspace = true
 anyhow.workspace = true
+chrono.workspace = true
+serde_json.workspace = true
+diesel.workspace = true
+diesel-async.workspace = true
+argon2.workspace = true
+rand_core.workspace = true
