--- a/crates/lightbridge-authz-api/Cargo.toml
+++ b/crates/lightbridge-authz-api/Cargo.toml
@@ -6,8 +6,12 @@ edition = "2024"
 [dependencies]
 axum.workspace = true
 async-trait.workspace = true
-lightbridge-authz-api-key = { path = "../lightbridge-authz-api-key" }
+lightbridge-authz-api-key = { workspace = true }
 lightbridge-authz-core = { workspace = true, features = ["axum"] }
 serde.workspace = true
 serde_json.workspace = true
 tracing.workspace = true
+diesel = { workspace = true, features = ["postgres"] }
+deadpool = { workspace = true, features = ["rt_tokio_1"] }
+deadpool-diesel = { workspace = true, features = ["postgres"] }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
