--- a/crates/lightbridge-authz-grpc/Cargo.toml
+++ b/crates/lightbridge-authz-grpc/Cargo.toml
@@ -12,4 +12,5 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 lightbridge-authz-core.workspace = true
 lightbridge-authz-proto.workspace = true
+lightbridge-authz-api-key.workspace = true
 chrono.workspace = true
