--- a/crates/lightbridge-authz-rest/Cargo.toml
+++ b/crates/lightbridge-authz-rest/Cargo.toml
@@ -13,7 +13,8 @@ tokio.workspace = true
 serde.workspace = true
 serde_yaml.workspace = true
 tracing.workspace = true
-lightbridge-authz-api.workspace = true
 async-trait.workspace = true
+lightbridge-authz-api.workspace = true
 lightbridge-authz-core.workspace = true
+lightbridge-authz-api-key.workspace = true
 uuid.workspace = true
