--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
     -   id: cargo-check
         name: cargo check
         description: Check the package for errors.
-        entry: cargo check
+        entry: cargo check --all-targets --all-features
         language: rust
         types: [rust]
         pass_filenames: false
@@ -25,7 +25,7 @@ repos:
     -   id: cargo-clippy
         name: cargo clippy
         description: Lint files with clippy.
-        entry: cargo clippy -- -D warnings
+        entry: cargo clippy --all-targets --all-features -- -D warnings
         language: rust
         types: [rust]
         pass_filenames: false
