feat: replace uuid with cuid2

--- a/crates/lightbridge-authz-rest/Cargo.toml
+++ b/crates/lightbridge-authz-rest/Cargo.toml
@@ -17,4 +17,4 @@ async-trait.workspace = true
 lightbridge-authz-api.workspace = true
 lightbridge-authz-core.workspace = true
 lightbridge-authz-api-key.workspace = true
-uuid.workspace = true
+cuid.workspace = true
