--- a/crates/lightbridge-authz-api-key/Cargo.toml
+++ b/crates/lightbridge-authz-api-key/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 lightbridge-authz-core.workspace = true
-uuid.workspace = true
+cuid.workspace = true
 anyhow.workspace = true
 chrono.workspace = true
 serde_json.workspace = true
