--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,10 +38,8 @@ axum = { version = "0.8", features = ["macros"] }
 async-trait = "0.1"
 clap = { version = "4", features = ["derive"] }
 
-deadpool = { version = "0" }
-deadpool-diesel = { version = "0" }
-diesel = { version = "2", features = ["postgres","chrono","serde_json"] }
-diesel-async = { version = "0", features = ["postgres","bb8"] }
+diesel = { version = "2", features = ["postgres", "chrono", "serde_json"] }
+diesel-async = { version = "0", features = ["postgres", "bb8"] }
 diesel_migrations = "2"
 chrono = { version = "0.4", features = ["serde"] }
 cuid = { version = "1" }
@@ -49,6 +47,7 @@ argon2 = "0.6.0-rc.0"
 rand_core = "0"
 envoy-types = "0.7.0"
 
+mimalloc = "0"
 
 [profile.prod]
 inherits = "release"
