--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ jsonwebtoken = { version = "9" }
 jwks = "0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 tonic = "0"
+tonic-reflection = "0"
 tonic-build = "0"
 prost = "0"
 prost-types = "0.14"
