--- a/crates/lightbridge-authz-grpc/Cargo.toml
+++ b/crates/lightbridge-authz-grpc/Cargo.toml
@@ -8,6 +8,7 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 tokio.workspace = true
 tonic.workspace = true
+tonic-reflection.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 lightbridge-authz-core.workspace = true
