feat: Introduce migration crate, CLI utilities, and gRPC types
This commit introduces several new features and improvements:

- **New Migration Crate:** A dedicated  crate has been added to handle database migrations. This centralizes migration logic and improves maintainability.
- **CLI Utilities:** New utility modules (, , ) have been added to the  crate, enhancing the command-line interface with better structure and functionality.
- **gRPC Types:** A new  file in  defines common gRPC types, improving code organization and reusability within the gRPC server.
- **Dependency Updates:** Various  files have been updated to reflect new dependencies and workspace configurations.
- **Build and CI Enhancements:** Updates to , , , and  streamline the build process and continuous integration.
- **Minor Refactorings:** Adjustments in , , and  to integrate new components and improve overall code quality.

--- a/compose.yaml
+++ b/compose.yaml
@@ -55,29 +55,47 @@ services:
     volumes:
       - ./.docker/keycloak_config/:/opt/keycloak/data/import/:ro
 
-  authz:
+  authz-migrate:
     deploy:
       replicas: 1
       resources:
         limits:
           memory: 1G
-          cpus: "1"
-    entrypoint: lightbridge-authz
-    command:
-      - serve
-      - --config
-      - /tmp/config.yaml
+          cpus: "0.5"
     build:
       context: .
     volumes:
       - ./.docker/authz/container.yaml:/tmp/config.yaml:ro
     environment:
-      RUST_LOG: debug
+      RUST_LOG: "debug"
+      CONFIG_PATH: "/tmp/config.yaml"
+    restart: on-failure
+    command:
+      - migrate
+    depends_on:
+      postgresql:
+        condition: service_started
+
+  authz:
+    depends_on:
+      authz-migrate:
+        condition: service_completed_successfully
+    deploy:
+      replicas: 1
+      resources:
+        limits:
+          memory: 1G
+          cpus: "0.5"
+    build:
+      context: .
+    volumes:
+      - ./.docker/authz/container.yaml:/tmp/config.yaml:ro
+    environment:
+      RUST_LOG: "debug"
+      CONFIG_PATH: "/tmp/config.yaml"
     ports:
       - "3000"
       - "3001"
-    healthcheck:
-      test: [ "CMD", "/usr/local/bin/lightbridge-authz-healthcheck" ]
 
 
 volumes:
