--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,13 +38,13 @@ jobs:
     needs: [sast, code-checks]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v5
       - name: Install Rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
       - name: Build release binaries
-        run: cargo build --release --all-targets --all-features
+        run: cargo build --profile prod --all-targets --all-features
       - name: Package artifacts
-        run: tar -czf release-artifacts.tar.gz -C target/release .
+        run: tar -czf release-artifacts.tar.gz -C target/prod .
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
