--- a/crates/lightbridge-authz-api-key/Cargo.toml
+++ b/crates/lightbridge-authz-api-key/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "lightbridge-authz-api-key"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
+publish.workspace = true
+license.workspace = true
+authors.workspace = true
 
 [dependencies]
 lightbridge-authz-core.workspace = true
@@ -11,5 +14,3 @@ chrono.workspace = true
 serde_json.workspace = true
 diesel.workspace = true
 diesel-async.workspace = true
-argon2.workspace = true
-rand_core.workspace = true
