--- a/crates/lightbridge-authz-core/Cargo.toml
+++ b/crates/lightbridge-authz-core/Cargo.toml
@@ -7,6 +7,7 @@ license.workspace = true
 authors.workspace = true
 
 [dependencies]
+cuid.workspace = true
 serde.workspace = true
 serde_yaml.workspace = true
 serde_json.workspace = true
