--- a/crates/lightbridge-authz-grpc/Cargo.toml
+++ b/crates/lightbridge-authz-grpc/Cargo.toml
@@ -13,3 +13,8 @@ lightbridge-authz-core.workspace = true
 lightbridge-authz-proto.workspace = true
 lightbridge-authz-api-key.workspace = true
 chrono.workspace = true
+serde_json.workspace = true
+prost-types.workspace = true
+
+[dev-dependencies]
+tokio.workspace = true
