feat: update api key validation implementation and dependencies

--- a/crates/lightbridge-authz-core/Cargo.toml
+++ b/crates/lightbridge-authz-core/Cargo.toml
@@ -16,6 +16,7 @@ diesel-async.workspace = true
 rand_core.workspace = true
 thiserror.workspace = true
 anyhow.workspace = true
+async-trait.workspace = true
 axum = { workspace = true, optional = true }
 
 [features]
