--- a/compose.yaml
+++ b/compose.yaml
@@ -97,6 +97,25 @@ services:
       - "3000"
       - "3001"
 
+  qdrant:
+    image: qdrant/qdrant:latest
+    restart: always
+    container_name: qdrant
+    ports:
+      - 6333:6333
+      - 6334:6334
+    expose:
+      - 6333
+      - 6334
+      - 6335
+    configs:
+      - source: qdrant_config
+        target: /qdrant/config/production.yaml
+
+configs:
+  qdrant_config:
+    content: |
+      log_level: INFO
 
 volumes:
   postgresql_data:
