--- a/crates/lightbridge-authz-grpc/Cargo.toml
+++ b/crates/lightbridge-authz-grpc/Cargo.toml
@@ -14,7 +14,8 @@ lightbridge-authz-proto.workspace = true
 lightbridge-authz-api-key.workspace = true
 chrono.workspace = true
 serde_json.workspace = true
-prost-types.workspace = true
 
 [dev-dependencies]
 tokio.workspace = true
+anyhow.workspace = true
+diesel-async.workspace = true
