refactor(clippy): Fix redundant field names and map_identity warnings

--- a/crates/lightbridge-authz-api-key/Cargo.toml
+++ b/crates/lightbridge-authz-api-key/Cargo.toml
@@ -10,6 +10,7 @@ authors.workspace = true
 lightbridge-authz-core.workspace = true
 anyhow.workspace = true
 chrono.workspace = true
+serde.workspace = true
 serde_json.workspace = true
 diesel.workspace = true
 diesel-async.workspace = true
