--- a/crates/lightbridge-authz-rest/Cargo.toml
+++ b/crates/lightbridge-authz-rest/Cargo.toml
@@ -24,3 +24,5 @@ tokio.workspace = true
 chrono.workspace = true
 anyhow.workspace = true
 serde_json.workspace = true
+goose.workspace = true
+reqwest.workspace = true
