--- a/crates/lightbridge-authz-core/Cargo.toml
+++ b/crates/lightbridge-authz-core/Cargo.toml
@@ -17,6 +17,7 @@ rand_core.workspace = true
 thiserror.workspace = true
 anyhow.workspace = true
 async-trait.workspace = true
+tracing.workspace = true
 axum = { workspace = true, optional = true }
 
 [features]
