--- a/k8s-postgresql.yaml
+++ b/k8s-postgresql.yaml
@@ -1,9 +1,14 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: self-service
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgresql
-  namespace: another-test
+  namespace: self-service
   labels:
     app: postgresql
 spec:
@@ -41,7 +46,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgresql
-  namespace: another-test
+  namespace: self-service
   labels:
     app: postgresql
 spec:
