--- a/crates/lightbridge-authz-api-key/Cargo.toml
+++ b/crates/lightbridge-authz-api-key/Cargo.toml
@@ -7,10 +7,13 @@ license.workspace = true
 authors.workspace = true
 
 [dependencies]
-lightbridge-authz-core.workspace = true
 anyhow.workspace = true
 chrono.workspace = true
 serde.workspace = true
-serde_json.workspace = true
 diesel.workspace = true
 diesel-async.workspace = true
+tracing.workspace = true
+
+[dependencies.lightbridge-authz-core]
+workspace = true
+features = ["db"]
